wip editmode, category cards linked in editmode, fixed jumpy segments

--- a/src/TrueOrFalse.Frontend.Web/Views/Categories/Detail/Partials/Segmentation/Segmentation.less
+++ b/src/TrueOrFalse.Frontend.Web/Views/Categories/Detail/Partials/Segmentation/Segmentation.less
@@ -122,14 +122,14 @@
                 margin-left: 10px;
             }
         }
+    }
 
-        .segmentDropdown {
-            font-size: 35px;
-            height: 35px;
+    .segmentDropdown {
+        font-size: 35px;
+        height: 30px;
 
-            i {
-                color: @highlightblue;
-            }
+        i {
+            color: @highlightblue;
         }
     }
 }
